radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  ports:
  - name: http
    port: 7878
  selector:
    app: radarr
